--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   
     <!-- External CSS file (NO inline <style> here) -->
     <link rel="stylesheet" href="styles.css">
+
+
+    
+
+    <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#2563eb">
+
+
+    
   </head>
   
   <body>
